exports[`Container should match snapshot 1`] = `
<div
  className="container" />
`;

exports[`Container should take an optional fluid prop 1`] = `
<div
  className="container-fluid" />
`;

exports[`Container should take regular element attributes 1`] = `
<div
  className="container my-class" />
`;
